# ditto

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
src/: cli.rs  launch.rs  main.rs  profile.rs  ui.rs
