[package]
name = "ditto-cli"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
authors = ["Reyansh Gupta"]
description = "A terminal profile switcher for Claude Code and Codex"
license = "MIT"
repository = "https://github.com/reyanshgupta/ditto-cli"
homepage = "https://github.com/reyanshgupta/ditto-cli"
readme = "README.md"
keywords = ["claude-code", "codex", "profiles", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "ditto-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.104"
clap = { version = "4.6.3", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
ratatui = "0.30.2"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
toml = "1.1.3"

[dev-dependencies]
tempfile = "3.27.0"
